Fix z-index

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -185,7 +185,6 @@ input{
     position: relative;
     top: -270px;
     margin: 0 auto;
-    z-index: 200;
 }
 
 #amp
